--- a/java-whiteboard-project/pom.xml
+++ b/java-whiteboard-project/pom.xml
@@ -42,8 +42,8 @@
 
         <!-- MySQL JDBC Driver -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
 
@@ -74,6 +74,17 @@
                             <directory>src/main/webapp</directory>
                         </resource>
                     </webResources>
+                </configuration>
+            </plugin>
+
+            <!-- Tomcat Maven Plugin for development -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>8082</port>
+                    <path>/whiteboard</path>
                 </configuration>
             </plugin>
 
