--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
-# Frontend Environment Variables
-VITE_API_URL=http://localhost:8082/whiteboard
+# Backend Database Configuration
+DB_URL=jdbc:mysql://localhost:3306/whiteboard_db
+DB_USER=root
+DB_PASSWORD=root
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=whiteboard_db
+
+# Server Configuration
+SERVER_PORT=8080
+TOMCAT_HOME=/path/to/apache-tomcat-9.0.83
+
